--- a/app/src/main/res/layout/register_window.xml
+++ b/app/src/main/res/layout/register_window.xml
@@ -26,7 +26,7 @@
             android:textColorHint="@color/design_default_color_primary_dark"
             android:textSize="20sp"
             app:met_floatingLabel="highlight"
-            app:met_baseColor="#EE82EE"
+            app:met_baseColor="@color/design_default_color_primary_dark"
             app:met_primaryColor="#FF00FF"
             app:met_singleLineEllipsis="true"
             />
@@ -42,7 +42,7 @@
             android:textColorHint="@color/design_default_color_primary_dark"
             android:textSize="20sp"
             app:met_floatingLabel="highlight"
-            app:met_baseColor="#EE82EE"
+            app:met_baseColor="@color/design_default_color_primary_dark"
             app:met_primaryColor="#FF00FF"
             app:met_singleLineEllipsis="true"
             />
@@ -58,7 +58,7 @@
             android:textColorHint="@color/design_default_color_primary_dark"
             android:textSize="20sp"
             app:met_floatingLabel="highlight"
-            app:met_baseColor="#EE82EE"
+            app:met_baseColor="@color/design_default_color_primary_dark"
             app:met_primaryColor="#FF00FF"
             app:met_singleLineEllipsis="true"
             />
@@ -74,7 +74,7 @@
             android:textColorHint="@color/design_default_color_primary_dark"
             android:textSize="20sp"
             app:met_floatingLabel="highlight"
-            app:met_baseColor="#EE82EE"
+            app:met_baseColor="@color/design_default_color_primary_dark"
             app:met_primaryColor="#FF00FF"
             app:met_singleLineEllipsis="true"
             />
