--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -11,25 +11,25 @@
         android:id="@+id/buttonSignUp"
         android:layout_width="142dp"
         android:layout_height="73dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="75dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="@color/purplebottombutton"
         android:fontFamily="@font/gilroy_semibold"
         android:text="SIGN UP"
         android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />
 
     <Button
         android:id="@+id/buttonSignIn"
         android:layout_width="142dp"
         android:layout_height="73dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="75dp"
         android:backgroundTint="@color/purplebottombutton"
         android:fontFamily="@font/gilroy_semibold"
         android:text="Sign in"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
