--- a/app/src/main/res/layout/goods_item.xml
+++ b/app/src/main/res/layout/goods_item.xml
@@ -30,6 +30,7 @@
                 android:layout_width="255dp"
                 android:layout_height="168dp"
                 android:contentDescription="@string/app_name"
+                android:transitionName="goodsImageAnim"
                 app:srcCompat="@drawable/ic_java" />
 
             <TextView
@@ -41,7 +42,8 @@
                 android:fontFamily="@font/gilroy_semibold"
                 android:text="Custom case #1"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:transitionName="TitleAnim" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,7 +59,8 @@
                     android:fontFamily="@font/gilroy_semibold"
                     android:text="199$"
                     android:textColor="@color/black"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:transitionName="CostAnim" />
 
 
             </LinearLayout>
