--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -13,8 +13,9 @@
         android:layout_height="56dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/gilroy_semibold"
-        android:text="Register"
+        android:text="@string/register"
         android:textSize="20dp"
+        android:textColor="@color/white"
         app:backgroundTint="#1C1C1E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,9 +27,10 @@
         android:layout_height="51dp"
         android:background="@drawable/purplekruglie"
         android:fontFamily="@font/gilroy_semibold"
-        android:text="Login"
+        android:text="@string/login"
         android:textSize="20dp"
         app:backgroundTint="#9795FD"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
