--- a/app/src/main/res/layout/activity_goods_page.xml
+++ b/app/src/main/res/layout/activity_goods_page.xml
@@ -52,7 +52,8 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/black"
-            android:text="Add to cart"
+            android:text="@string/addToCartGoodsPage"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
