--- a/app/src/main/res/layout/activity_goods_page.xml
+++ b/app/src/main/res/layout/activity_goods_page.xml
@@ -52,6 +52,7 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/black"
+            android:onClick="addToTheCart"
             android:text="@string/addToCartGoodsPage"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
