--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:background="@drawable/kruglye_ugli"
@@ -33,8 +34,8 @@
             android:id="@+id/textViewOnPlaceYourOrder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/buttonPlaceYourOrder"
             android:fontFamily="@font/gilroy_semibold"
+            android:text="@string/buttonPlaceYourOrder"
             android:textColor="@color/white"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/placeyourorder"
@@ -48,8 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="140dp"
-            android:text="Subtotal:"
             android:fontFamily="@font/gilroy_semibold"
+            android:text="Subtotal:"
             android:textColor="@color/black"
             android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -62,8 +63,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="110dp"
-            android:text="Shipping cost:"
             android:fontFamily="@font/gilroy_semibold"
+            android:text="Shipping cost:"
             android:textColor="@color/black"
             android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -96,6 +97,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_strelka" />
+
+    <ListView
+        android:id="@+id/goods_list"
+        android:background="@color/blackbackgroud"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
